# slack_bot_lambda

./: build.sh  lambda_function.py  pyproject.toml
lib/chardet-4.0.0.dist-info/: RECORD
